--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ section .title::after {
   bottom: -8px;
   left: 50%;
   font-size: 20px;
-  color: crimson;
+  /* color: crimson;         */
   padding: 0 5px;
   background: #fff;
   transform: translateX(-50%);
@@ -88,6 +88,7 @@ section .title::after {
   width: 100%;
   z-index: 999;
   padding: 30px 0;
+  background: grey;
   font-family: "Ubuntu", sans-serif;
   transition: all 0.3s ease;
 }
@@ -171,7 +172,7 @@ section .title::after {
   display: flex;
   background: url("images/banner.jpg") no-repeat center;
   height: 100vh;
-  color: #fff;
+  color: gray;
   min-height: 500px;
   background-size: cover;
   background-attachment: fixed;
